# devcontainer

./: .clang-format  .gitignore  CMakeLists.txt  toolchain.cmake
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: add_submodule.sh  create_library.sh  project_setup.sh  project_update.sh  release.sh
inc/: a_header_file.h
src/: CMakeLists.txt
test/: CMakeLists.txt  toolchain.cmake
